name:                wai-logging-effect-google
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dp-cylme/wai-logging-effect-google#readme
license:             BSD3
license-file:        LICENSE
author:              Danil Petrov
maintainer:          dpetrov@cyl.me
copyright:           Copyright: (c) 2016 Danil Petrov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wai-logging-effect-google-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gogol-logging >= 0.1
                     , time >= 1.6
                     , text >= 1.2
                     , lens >= 4.14
                     , http-types >= 0.9
                     , network >= 2.6
                     , iproute >= 1.7
                     , logging-effect >= 1.1
                     , wai >= 3.2
                     , wai-logging-effect-google
  default-language:    Haskell2010

test-suite wai-logging-effect-google-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wai-logging-effect-google
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dp-cylme/wai-logging-effect-google
